--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -35,6 +35,7 @@
     <div class="reset-password">
         <a href="#">Olvidé mi Contraseña</a>
     </div>
+</div>
     <script src="https://drive.google.com/uc?export=view&id=1Q8RX4zhEuF5DCA2tX9sOmDjrIP5Y_rhc"></script>
     <script src="https://drive.google.com/uc?export=view&id=1gKxmxwLhdJpyZCuW8n24RE2DJ8_t1t3Q"></script>
 </body>
