--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -14,9 +14,9 @@
     </div>
     <div class="formulario">
         <h2>Iniciar Sesión</h2>
-        <form action="#">
-            <input type="text" placeholder="Usuario" required>
-            <input type="password" placeholder="Contraseña" required>
+        <form action="servlet1">
+            <input type="text" placeholder="Usuario" required name="username">
+            <input type="password" placeholder="Contraseña" required name="password">
             <input type="submit"  value="Iniciar Sesión">
         </form>
     </div>
