--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -16,7 +16,7 @@
         <h2>Iniciar Sesión</h2>
         <form action="servlet1">
             <input type="text" placeholder="Usuario" required name="username">
-            <input type="password" placeholder="Contraseña" required name="userpass>
+            <input type="password" placeholder="Contraseña" required name="userpass">
             <input type="submit"  value="Iniciar Sesión">
         </form>
     </div>
