--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -14,7 +14,7 @@
     </div>
     <div class="formulario">
         <h2>Iniciar Sesión</h2>
-        <form action="servlet1">
+        <form action="servlet1" method="post">
             <input type="text" placeholder="Usuario" required name="username">
             <input type="password" placeholder="Contraseña" required name="userpass">
             <input type="submit"  value="Iniciar Sesión">
