--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -7,7 +7,7 @@
     <link rel= "stylesheet" href= "https://drive.google.com/uc?export=view&id=1GqIVYgLDRvI1I1xvaXGKuE1xlq8lcm7r">
 
 </head>
-<body>
+<body background="https://drive.google.com/uc?export=view&id=1lYcqAZLnNqQPaow6cAQmlyfgKbWOz6QB">
 <div class="contenedor-form">
     <div class="toggle">
         <span> Crear cuenta</span>
