--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -7,17 +7,17 @@
     <link rel= "stylesheet" href= "https://drive.google.com/uc?export=view&id=1GqIVYgLDRvI1I1xvaXGKuE1xlq8lcm7r">
 
 </head>
-<body background="https://drive.google.com/uc?export=view&id=1lYcqAZLnNqQPaow6cAQmlyfgKbWOz6QB">
+<body>
 <div class="contenedor-form">
     <div class="toggle">
         <span> Crear cuenta</span>
     </div>
     <div class="formulario">
         <h2>Iniciar Sesión</h2>
-        <form action="servlet1" method="post">
-            <input type="text" placeholder="Usuario" required name="username">
-            <input type="password" placeholder="Contraseña" required name="userpass">
-            <input type="submit"  value="Iniciar Sesión">
+        <form action="SERVLOGIN" method="post">
+            <input type="text" placeholder="Usuario" required name="txtUsuario">
+            <input type="password" placeholder="Contraseña" required name="txtPass">
+            <input type="submit"  value="Iniciar Sesión" name="btnLogin">
         </form>
     </div>
 
