--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -73,7 +73,7 @@
 
           <div class="navbar-btn d-none d-sm-inline-block">
             <ul>
-              <li><a class="solid" href="/login.jsp?id=true">Login</a></li>
+              <li><a class="solid" href="/404.html">Login</a></li>
             </ul>
           </div>
         </nav> <!-- navbar -->
@@ -98,7 +98,7 @@
                 <h1 class="title">Paraguay Parking System</h1>
                 <p class="text">Con nosotros encontrarás todo lo que siempre estuviste buscando, estamos contigo las 24 horas al dia y los 7 dias de la semana. </p>
                 <ul class="slider-btn rounded-buttons">
-                  <li><a class="main-btn rounded-one" href="/login.jsp?id=true">¿No eres cliente nuestro? Registrese aqui.</a></li>
+                  <li><a class="main-btn rounded-one" href="/404.html">¿No eres cliente nuestro? Registrese aqui.</a></li>
                 </ul>
               </div>
             </div>
@@ -369,7 +369,7 @@
         </div>
         <div class="copyright text-center mt-35">
           <p class="text">Diseñado por <a rel="nofollow" href="">JDC</a> </p>
-          <p class="text">Acceso Empleados. Toque aqui -><a rel="nofollow" href="/login.jsp">*</a> </p>
+          <p class="text">Acceso Empleados. Toque aqui -><a rel="nofollow" href="/login.jsp">-> uwu <-</a> </p>
         </div> <!--  copyright -->
       </div>
     </div> <!-- row -->
