--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,8 @@
   <!--====== Style CSS ======-->
   <link rel="stylesheet" href="https://drive.google.com/uc?export=view&id=1JaZipGlTXs9Yc511wcJScbK2ucGF19dZ">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
+
 </head>
 
 <body>
@@ -70,6 +72,12 @@
               <li class="nav-item"><a class="page-scroll" href="#contact">Contactos</a></li>
             </ul>
           </div>
+
+          <div class="navbar-btn d-none d-sm-inline-block">
+            <ul>
+              <li><a class="solid" href="acceso.jsp">Login</a></li>
+            </ul>
+          </div>
         </nav> <!-- navbar -->
       </div>
     </div> <!-- row -->
@@ -91,6 +99,9 @@
               <div class="slider-content">
                 <h1 class="title">Paraguay Parking System</h1>
                 <p class="text">Con nosotros encontrarás todo lo que siempre estuviste buscando, estamos contigo las 24 horas al dia y los 7 dias de la semana. </p>
+                <ul class="slider-btn rounded-buttons">
+                  <li><a class="main-btn rounded-one" href="registro.jsp">¿No eres cliente nuestro? Registrese aqui.</a></li>
+                </ul>
               </div>
             </div>
           </div> <!-- row -->
@@ -360,7 +371,7 @@
         </div>
         <div class="copyright text-center mt-35">
           <p class="text">Diseñado por <a rel="nofollow" href="">JDC</a> </p>
-          <p class="text">Acceso Empleados. Toque aqui -><a rel="nofollow" href="/login.jsp">-> uwu <-</a> </p>
+          <p class="text">Acceso Empleados. Toque aqui -><a rel="nofollow" href="/login.jsp"><i class="fas fa-user-lock"></i></a> </p>
         </div> <!--  copyright -->
       </div>
     </div> <!-- row -->
